{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 105,
  "lineage": "751dfd94-6178-3c90-523f-b7266c256af9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "SonTB4_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f1ed9362427de06",
            "domain": "vpc",
            "id": "eipalloc-00f1ed9362427de06",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-140-62-221.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.62.221",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SonTB4_Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07a683b72d6bd7da3",
            "arn": "arn:aws:ec2:us-east-2:541253215789:instance/i-0597b36733c845e2d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0597b36733c845e2d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "SonTB4_Ohio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fa2824a118d8eb1d",
            "private_dns": "ip-192-4-0-236.us-east-2.compute.internal",
            "private_ip": "192.4.0.236",
            "public_dns": "ec2-18-116-80-149.us-east-2.compute.amazonaws.com",
            "public_ip": "18.116.80.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-084a6307217552202",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d149cdfd93b2d9a3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a176298eaaa79442",
            "tags": {
              "Name": "SonTB4_Jenkins"
            },
            "tags_all": {
              "Name": "SonTB4_Jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d149cdfd93b2d9a3"
            ]
          },
          "dependencies": [
            "aws_security_group.private",
            "aws_subnet.SonTB4_public_subnet_01",
            "aws_vpc.SonTB4_VLAN",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SonTB4_host_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07a683b72d6bd7da3",
            "arn": "arn:aws:ec2:us-east-2:541253215789:instance/i-0d93e57f35f345876",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d93e57f35f345876",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "SonTB4_Ohio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04865a0356e222108",
            "private_dns": "ip-192-4-0-116.us-east-2.compute.internal",
            "private_ip": "192.4.0.116",
            "public_dns": "ec2-3-16-67-86.us-east-2.compute.amazonaws.com",
            "public_ip": "3.16.67.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bf48305a217ae3d0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d149cdfd93b2d9a3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a176298eaaa79442",
            "tags": {
              "Name": "SonTB4_host_dev"
            },
            "tags_all": {
              "Name": "SonTB4_host_dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d149cdfd93b2d9a3"
            ]
          },
          "dependencies": [
            "aws_security_group.private",
            "aws_subnet.SonTB4_public_subnet_01",
            "aws_vpc.SonTB4_VLAN",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SonTB4_host_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07a683b72d6bd7da3",
            "arn": "arn:aws:ec2:us-east-2:541253215789:instance/i-0d9a75fd4d3614e99",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d9a75fd4d3614e99",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "SonTB4_Ohio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dce722af80ff47df",
            "private_dns": "ip-192-4-0-110.us-east-2.compute.internal",
            "private_ip": "192.4.0.110",
            "public_dns": "ec2-3-21-46-104.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.46.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0209dcc4a79b20e3f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d149cdfd93b2d9a3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a176298eaaa79442",
            "tags": {
              "Name": "SonTB4_host_main"
            },
            "tags_all": {
              "Name": "SonTB4_host_main"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d149cdfd93b2d9a3"
            ]
          },
          "dependencies": [
            "aws_security_group.private",
            "aws_subnet.SonTB4_public_subnet_01",
            "aws_vpc.SonTB4_VLAN",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "SonTB4_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:541253215789:internet-gateway/igw-0e20ef8372c5e0767",
            "id": "igw-0e20ef8372c5e0767",
            "owner_id": "541253215789",
            "tags": {
              "Name": "SonTB4_internet_gateway"
            },
            "tags_all": {
              "Name": "SonTB4_internet_gateway"
            },
            "vpc_id": "vpc-0b192508ecc413a77"
          },
          "dependencies": [
            "aws_vpc.SonTB4_VLAN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "SonTB4_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f1ed9362427de06",
            "connectivity_type": "public",
            "id": "nat-02b8b3e0466b0ec61",
            "network_interface_id": "eni-03d6f7d3ecd5a63fe",
            "private_ip": "192.4.0.152",
            "public_ip": "3.140.62.221",
            "subnet_id": "subnet-0a176298eaaa79442"
          },
          "dependencies": [
            "aws_eip.SonTB4_nat",
            "aws_internet_gateway.SonTB4_internet_gateway",
            "aws_subnet.SonTB4_public_subnet_01",
            "aws_vpc.SonTB4_VLAN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "SonTB4_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:541253215789:route-table/rtb-0e04c0497c90267a2",
            "id": "rtb-0e04c0497c90267a2",
            "owner_id": "541253215789",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02b8b3e0466b0ec61",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SonTB4_nat_private"
            },
            "tags_all": {
              "Name": "SonTB4_nat_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b192508ecc413a77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.SonTB4_nat",
            "aws_internet_gateway.SonTB4_internet_gateway",
            "aws_nat_gateway.SonTB4_nat_gateway",
            "aws_subnet.SonTB4_public_subnet_01",
            "aws_vpc.SonTB4_VLAN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "SonTB4_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:541253215789:route-table/rtb-0a0265e9a2d88e4d0",
            "id": "rtb-0a0265e9a2d88e4d0",
            "owner_id": "541253215789",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e20ef8372c5e0767",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SonTB4_route_table"
            },
            "tags_all": {
              "Name": "SonTB4_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b192508ecc413a77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.SonTB4_internet_gateway",
            "aws_vpc.SonTB4_VLAN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SonTB4_route_table_association_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035d4f21a3cc74bb4",
            "route_table_id": "rtb-0a0265e9a2d88e4d0",
            "subnet_id": "subnet-0a176298eaaa79442"
          },
          "dependencies": [
            "aws_internet_gateway.SonTB4_internet_gateway",
            "aws_route_table.SonTB4_route_table",
            "aws_subnet.SonTB4_public_subnet_01",
            "aws_vpc.SonTB4_VLAN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SonTB4_route_table_association_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d713269c79fd3e5f",
            "route_table_id": "rtb-0a0265e9a2d88e4d0",
            "subnet_id": "subnet-04d206967ab098cbc"
          },
          "dependencies": [
            "aws_internet_gateway.SonTB4_internet_gateway",
            "aws_route_table.SonTB4_route_table",
            "aws_subnet.SonTB4_private_subnet_01",
            "aws_vpc.SonTB4_VLAN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:541253215789:security-group/sg-0d149cdfd93b2d9a3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d149cdfd93b2d9a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.4.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_bastion_host",
            "name_prefix": "",
            "owner_id": "541253215789",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security_private"
            },
            "tags_all": {
              "Name": "Security_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b192508ecc413a77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.SonTB4_VLAN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:541253215789:security-group/sg-0647ca49a047a079e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0647ca49a047a079e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all",
            "name_prefix": "",
            "owner_id": "541253215789",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security_public"
            },
            "tags_all": {
              "Name": "Security_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b192508ecc413a77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.SonTB4_VLAN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SonTB4_private_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:541253215789:subnet/subnet-04d206967ab098cbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.4.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d206967ab098cbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "541253215789",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SonTB4_private_subnet_01"
            },
            "tags_all": {
              "Name": "SonTB4_private_subnet_01"
            },
            "vpc_id": "vpc-0b192508ecc413a77"
          },
          "dependencies": [
            "aws_vpc.SonTB4_VLAN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SonTB4_private_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:541253215789:subnet/subnet-06def1bec8ee95162",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.4.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06def1bec8ee95162",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "541253215789",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SonTB4_private_subnet_02"
            },
            "tags_all": {
              "Name": "SonTB4_private_subnet_02"
            },
            "vpc_id": "vpc-0b192508ecc413a77"
          },
          "dependencies": [
            "aws_vpc.SonTB4_VLAN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SonTB4_public_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:541253215789:subnet/subnet-0a176298eaaa79442",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.4.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a176298eaaa79442",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "541253215789",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SonTB4_public_subnet_01"
            },
            "tags_all": {
              "Name": "SonTB4_public_subnet_01"
            },
            "vpc_id": "vpc-0b192508ecc413a77"
          },
          "dependencies": [
            "aws_vpc.SonTB4_VLAN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SonTB4_public_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:541253215789:subnet/subnet-059494a9db80b5749",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.4.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059494a9db80b5749",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "541253215789",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SonTB4_public_subnet_02"
            },
            "tags_all": {
              "Name": "SonTB4_public_subnet_02"
            },
            "vpc_id": "vpc-0b192508ecc413a77"
          },
          "dependencies": [
            "aws_vpc.SonTB4_VLAN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "SonTB4_VLAN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:541253215789:vpc/vpc-0b192508ecc413a77",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.4.0.0/16",
            "default_network_acl_id": "acl-031a5607e0a9900fe",
            "default_route_table_id": "rtb-03d33942bafb27b63",
            "default_security_group_id": "sg-056367c04989a83a9",
            "dhcp_options_id": "dopt-8c7efde7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b192508ecc413a77",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d33942bafb27b63",
            "owner_id": "541253215789",
            "tags": {
              "Name": "SonTB4_VPC"
            },
            "tags_all": {
              "Name": "SonTB4_VPC"
            }
          }
        }
      ]
    }
  ]
}